# BenchmarkApp

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/benchmark_core_example/: MainActivity.kt
example/lib/: main.dart
example/lib/Controllers/: cpu_benchmark_controller.dart  gpu_controller.dart  memory_controller.dart  specs_controller.dart
example/lib/Views/: cpu_view.dart  gpu_view.dart  home_view.dart  memory_view.dart  navbar_view.dart  specs_view.dart
lib/: benchmark_core.dart  benchmark_core_bindings_generated.dart
src/: CMakeLists.txt  benchmark_core.c  cpu_module.c  cpu_module.h  gpu_module.c  gpu_module.h  memory_module.c  memory_module.h  specs_module.c  specs_module.h
